Resolves: tdf#116003 check presence of subtotal in group, tdf#107267 follow-up

Change-Id: Ifed6e28926c689dd17914b8b1cbf47b58e2ffcdc